// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Textarea Set to disabled 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-xda4ls-0 Field-sc-1lebjra-0 erVIOB"
    >
      <label
        class="FieldLabel__Label-sc-1t1cp4f-0 dDzyZF FieldLabel-sc-1t1cp4f-2 dClnot"
        color="black"
        style="display:block"
      >
        <div
          class="Box-xda4ls-0 biCpIl"
          data-testid="field-label"
        >
          <span
            class="FieldLabel__LabelText-sc-1t1cp4f-1 idDszt"
          >
            Label
          </span>
        </div>
        <textarea
          aria-invalid="false"
          aria-required="false"
          class="Textarea__StyledTextarea-sc-1tyrhr0-0 dMPRMO"
          disabled=""
          rows="3"
        />
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Textarea Textarea 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-xda4ls-0 Field-sc-1lebjra-0 erVIOB"
    >
      <label
        class="FieldLabel__Label-sc-1t1cp4f-0 dDzyZF FieldLabel-sc-1t1cp4f-2 dClnot"
        color="black"
        style="display:block"
      >
        <div
          class="Box-xda4ls-0 biCpIl"
          data-testid="field-label"
        >
          <span
            class="FieldLabel__LabelText-sc-1t1cp4f-1 idDszt"
          >
            Label
          </span>
        </div>
        <textarea
          aria-invalid="false"
          aria-required="false"
          class="Textarea__StyledTextarea-sc-1tyrhr0-0 icWfOD"
          rows="3"
        />
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Textarea Textarea with all props 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-xda4ls-0 Field-sc-1lebjra-0 erVIOB"
    >
      <label
        class="FieldLabel__Label-sc-1t1cp4f-0 dDzyZF FieldLabel-sc-1t1cp4f-2 dClnot"
        color="black"
        style="display:block"
      >
        <div
          class="Box-xda4ls-0 biCpIl"
          data-testid="field-label"
        >
          <span
            class="FieldLabel__LabelText-sc-1t1cp4f-1 idDszt"
          >
            Label
          </span>
          <span
            class="Text-sc-1wu7vpu-0 bphWXP"
            color="darkGrey"
            font-size="12px"
          >
            (Required)
          </span>
          <p
            class="Text-sc-1wu7vpu-0 HelpText__HelpTextContent-sc-1jzmq2g-0 feAJVX"
            color="currentColor"
            font-size="medium"
          >
            here's some help...
          </p>
        </div>
        <textarea
          aria-invalid="false"
          aria-required="true"
          class="Textarea__StyledTextarea-sc-1tyrhr0-0 icWfOD"
          placeholder="Placeholder"
          required=""
          rows="3"
        />
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Textarea With custom id 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-xda4ls-0 Field-sc-1lebjra-0 erVIOB"
    >
      <label
        class="FieldLabel__Label-sc-1t1cp4f-0 dDzyZF FieldLabel-sc-1t1cp4f-2 dClnot"
        color="black"
        style="display:block"
      >
        <div
          class="Box-xda4ls-0 biCpIl"
          data-testid="field-label"
        >
          <span
            class="FieldLabel__LabelText-sc-1t1cp4f-1 idDszt"
          >
            Label
          </span>
        </div>
        <textarea
          aria-invalid="false"
          aria-required="false"
          class="Textarea__StyledTextarea-sc-1tyrhr0-0 icWfOD"
          id="my-custom-id"
          rows="3"
        />
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Textarea With custom number of rows 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-xda4ls-0 Field-sc-1lebjra-0 erVIOB"
    >
      <label
        class="FieldLabel__Label-sc-1t1cp4f-0 dDzyZF FieldLabel-sc-1t1cp4f-2 dClnot"
        color="black"
        style="display:block"
      >
        <div
          class="Box-xda4ls-0 biCpIl"
          data-testid="field-label"
        >
          <span
            class="FieldLabel__LabelText-sc-1t1cp4f-1 idDszt"
          >
            Label
          </span>
        </div>
        <textarea
          aria-invalid="false"
          aria-required="false"
          class="Textarea__StyledTextarea-sc-1tyrhr0-0 icWfOD"
          rows="7"
        />
      </label>
    </div>
  </div>
</div>
`;

exports[`Storyshots Textarea using ref to control focus 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-xda4ls-0 Field-sc-1lebjra-0 erVIOB"
    >
      <label
        class="FieldLabel__Label-sc-1t1cp4f-0 dDzyZF FieldLabel-sc-1t1cp4f-2 dClnot"
        color="black"
        style="display:block"
      >
        <div
          class="Box-xda4ls-0 biCpIl"
          data-testid="field-label"
        >
          <span
            class="FieldLabel__LabelText-sc-1t1cp4f-1 idDszt"
          >
            Label
          </span>
        </div>
        <textarea
          aria-invalid="false"
          aria-required="false"
          class="Textarea__StyledTextarea-sc-1tyrhr0-0 icWfOD"
          rows="7"
        />
      </label>
    </div>
    <button
      class="Button__WrapperButton-sc-1omxup2-0 hkfOQr"
    >
      Focus the Input
    </button>
  </div>
</div>
`;

exports[`Storyshots Textarea with error list 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-xda4ls-0 Field-sc-1lebjra-0 erVIOB"
    >
      <label
        class="FieldLabel__Label-sc-1t1cp4f-0 dDzyZF FieldLabel-sc-1t1cp4f-2 dClnot"
        color="black"
        style="display:block"
      >
        <div
          class="Box-xda4ls-0 biCpIl"
          data-testid="field-label"
        >
          <span
            class="FieldLabel__LabelText-sc-1t1cp4f-1 idDszt"
          >
            Label
          </span>
        </div>
        <textarea
          aria-invalid="true"
          aria-required="false"
          class="Textarea__StyledTextarea-sc-1tyrhr0-0 iCQPNY"
          rows="3"
        />
      </label>
      <div
        class="Box-xda4ls-0 Flex-hrfu3s-0 ycNbA"
        color="red"
      >
        <svg
          aria-hidden="true"
          class="Icon-fc7twp-0 QuoIa"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="24px"
          icon="error"
          mr="x1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <div
          class="InlineValidation__Wrapper-sc-1jic7dw-0 kqhCKM"
        >
          <p
            class="Text-sc-1wu7vpu-0 RbfMK"
            color="currentColor"
            font-size="medium"
          >
            Please fill this out
          </p>
          <ul
            class="List-sc-1cqkmnl-0 iEviVa"
            color="currentColor"
          >
            <li
              class="ListItem-qqenhw-0 gzsWDK"
              color="currentColor"
            >
              Error message 1
            </li>
            <li
              class="ListItem-qqenhw-0 gzsWDK"
              color="currentColor"
            >
              Error message 2
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Textarea with error message 1`] = `
<div
  style="padding:24px"
>
  <div
    class="NDSProvider__GlobalStyles-f28eoq-0 gXOmnU"
  >
    <div
      class="Box-xda4ls-0 Field-sc-1lebjra-0 erVIOB"
    >
      <label
        class="FieldLabel__Label-sc-1t1cp4f-0 dDzyZF FieldLabel-sc-1t1cp4f-2 dClnot"
        color="black"
        style="display:block"
      >
        <div
          class="Box-xda4ls-0 biCpIl"
          data-testid="field-label"
        >
          <span
            class="FieldLabel__LabelText-sc-1t1cp4f-1 idDszt"
          >
            Label
          </span>
        </div>
        <textarea
          aria-invalid="true"
          aria-required="false"
          class="Textarea__StyledTextarea-sc-1tyrhr0-0 iCQPNY"
          rows="3"
        />
      </label>
      <div
        class="Box-xda4ls-0 Flex-hrfu3s-0 ycNbA"
        color="red"
      >
        <svg
          aria-hidden="true"
          class="Icon-fc7twp-0 QuoIa"
          color="currentColor"
          fill="currentColor"
          focusable="false"
          height="24px"
          icon="error"
          mr="x1"
          viewBox="0 0 24 24"
          width="24px"
        >
          <path
            d="M11 15h2v2h-2zm0-8h2v6h-2zm.99-5C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zM12 20c-4.42 0-8-3.58-8-8s3.58-8 8-8 8 3.58 8 8-3.58 8-8 8z"
          />
        </svg>
        <div
          class="InlineValidation__Wrapper-sc-1jic7dw-0 kqhCKM"
        >
          <p
            class="Text-sc-1wu7vpu-0 RbfMK"
            color="currentColor"
            font-size="medium"
          >
            Please fill this out
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
